--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -51,6 +51,12 @@
 									<tr><td>Scott Jackson</td><td>MCAO</td></tr>
 									<tr><td>Sheila Vincent</td><td>MCAO</td></tr>
 									<tr><td>Terry Lisansky</td><td>MCAO</td></tr>
+									<tr><td>Angel Strobach</td><td>University of Delaware</td></tr>
+									<tr><td>Benjamin Kaiser</td><td>University of Delaware</td></tr>
+									<tr><td>Caitlyn Mattison</td><td>University of Delaware</td></tr>
+									<tr><td>Evelyn Palmer</td><td>University of Delaware</td></tr>
+									<tr><td>Jarrod Bieber</td><td>University of Delaware</td></tr>
+									<tr><td>Patrick Stanley</td><td>University of Delaware</td></tr>
 									<tr><td>Britt Lundgren</td><td>University of North Carolina at Asheville</td></tr>
 									<tr><td>Jacob Crawford</td><td>University of North Carolina at Asheville</td></tr>
 									<tr><td>Jacob Stimac</td><td>University of North Carolina at Asheville</td></tr>
