--- a/xcov31_targets.html
+++ b/xcov31_targets.html
@@ -51,6 +51,10 @@
 								<p>RA: 21 55 02.96; Dec: +76 10 09.19</p>
 								<p>Finder Chart:</p>
 								<span class="image"><img src="images/GALEX_J215503.0+761009_20arcminute_finder_chart.jpeg" width="500" height=auto alt="" /></span>
+								<h3>PG 0112+104, G mag = 15.37</h3>
+								<p>RA: 01 14 37.65; Dec: +10 41 04.76</p>
+								<p>Finder Chart:</p>
+								<span class="image"><img src="images/PG0112_finderchart_20.jpg.webp" width="500" height=auto alt="" /></span>
                 
 							</section>
 						<section id="content" class="main">
