--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -63,10 +63,10 @@
 									<tr><td>Will Kinley</td><td>University of North Carolina at Asheville</td></tr>
 									<tr><td>Andrzej Baran</td><td>Missouri State University</td></tr>
 									<tr><td>Michael Reed</td><td>Missouri State University</td></tr>
+									<tr><td>Ent</td><td>Missouri State University</td></tr>
 									<tr><td>Mike Montegomery</td><td>University of Texas at Austin</td></tr>
 									<tr><td>Barbara Castanheira</td><td>Baylor University</td></tr>
 									<tr><td>Rudy Morales</td><td>Baylor University</td></tr>
-									<tr><td>Tony Fedi</td><td>Baylor University</td></tr>
 									<tr><td>Momin Khan</td><td>Baylor University</td></tr>
 									<tr><td>Elizabeth Green</td><td>University of Arizona and Steward Observatory</td></tr>
 									<tr><td>Mukremin Kilic</td><td>University of Oklahoma</td></tr>
@@ -98,7 +98,7 @@
 									<tr><td>Tu-Hong Zhong</td><td>XAO</td></tr>
 									<tr><td>Santosh Josi</td><td>ARIES, Aryabhatta Research Institute of Observational Sciences</td></tr>
 									<tr><td>Athul Dileep</td><td>ARIES, Aryabhatta Research Institute of Observational Sciences</td></tr>
-									<tr><td>Surat</td><td>ARIES, Aryabhatta Research Institute of Observational Sciences</td></tr>
+									<tr><td>Surath Chandra Ghosh</td><td>ARIES, Aryabhatta Research Institute of Observational Sciences</td></tr>
 									<tr><td>S. Seetha</td><td>Raman Research Institute</td></tr>
 									<tr><td>S. Muneer</td><td>Indian Institute of Astrophysics, Bengaluru</td></tr>
 									<tr><td>Alexander Serebryanskiy</td><td>Fesenkov Astrophyiscal Institute</td></tr>
