--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -113,6 +113,7 @@
 									<tr><td>Zso&#769fia Bogna&#769r</td><td>Konkoly Observatory</td></tr>
 									<tr><td>Petra Va&#769rkonyi</td><td> E&ouml;tv&ouml;s Lora&#769nd University</td></tr>
 									<tr><td>Alex Binks</td><td>University of T&uuml;bingen</td></tr>
+									<tr><td>Anirudh Thakar</td><td>University of T&uuml;bingen</td></tr>
 									<tr><td>Jan Ka&#778re Trandem Qvam</td><td>Horten Astronomical Observatory</td></tr>
 									<tr><td>Boris Gaensicke</td><td>University of Warwick</td></tr>
 									<tr><td>Paul Chote</td><td>University of Warwick</td></tr>
