--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -61,6 +61,10 @@
 									<tr><td>Jacob Crawford</td><td>University of North Carolina at Asheville</td></tr>
 									<tr><td>Jacob Stimac</td><td>University of North Carolina at Asheville</td></tr>
 									<tr><td>Will Kinley</td><td>University of North Carolina at Asheville</td></tr>
+									<tr><td>Jamie Taylor</td><td>University of Florida</td></tr>
+									<tr><td>Hyde P. Kenney</td><td>University of Florida</td></tr>
+									<tr><td>Zabdiel Sanchez</td><td>University of Florida</td></tr>
+									<tr><td>Francisco Mendez</td><td>University of Florida</td></tr>
 									<tr><td>Andrzej Baran</td><td>Missouri State University</td></tr>
 									<tr><td>Michael Reed</td><td>Missouri State University</td></tr>
 									<tr><td>Ent</td><td>Missouri State University</td></tr>
