--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -68,6 +68,8 @@
 									<tr><td>Andrzej Baran</td><td>Missouri State University</td></tr>
 									<tr><td>Michael Reed</td><td>Missouri State University</td></tr>
 									<tr><td>Ent</td><td>Missouri State University</td></tr>
+									<tr><td>Johnny Scarborough</td><td>PJMO</td></tr>
+									<tr><td>Dick Campbell</td><td>PJMO</td></tr>
 									<tr><td>Mike Montegomery</td><td>University of Texas at Austin</td></tr>
 									<tr><td>Barbara Castanheira</td><td>Baylor University</td></tr>
 									<tr><td>Rudy Morales</td><td>Baylor University</td></tr>
@@ -81,7 +83,7 @@
 									<tr><td>Sabrina Poulsen</td><td>University of Oklahoma</td></tr>
 									<tr><td>Gracyn Jewett</td><td>University of Oklahoma</td></tr>
 									<tr><td>Lester Fox Machado</td><td>Instituto de Astronomi&#769a de la Universidad Nacional Auto&#769noma de Me&#769xico</td></tr>
-									<tr><td>Carolina Carbajal Quinata</td><td>Instituto de Astronomi&#769a de la Universidad Nacional Auto&#769noma de Me&#769xico</td></tr>
+									<tr><td>Chuck Cynamon</td><td>AAVSO</td></tr>
 									<tr><td>Daniel Huber</td><td>University of Hawaii</td></tr>
 									<tr><td>Andrew Hoffman</td><td>University of Hawaii</td></tr>
 									<tr><td>Kyle Hart</td><td>University of Hawaii</td></tr>
@@ -130,6 +132,7 @@
 									<tr><td>Diana Quispe Mamani</td><td>Universidade Federal de Santa Catarina</td></tr>
 									<tr><td>Jonathan Jo&atilde;o Ramos</td><td>Universidade Federal de Santa Catarina</td></tr>
 									<tr><td>Vitor Fermiano</td><td>Universidade Federal de Santa Catarina</td></tr>
+									<tr><td>Josch Hambsch</td><td>AAVSO</td></tr>
 								</table></p>
               
 							</section>
