--- a/xcov31_telescopes.html
+++ b/xcov31_telescopes.html
@@ -37,9 +37,10 @@
 									<tr><td>Calar Alto Observatory (CAHA) 2.2m</td><td>Infrared</td><td>Andalucia, Spain</td></tr>
 									<tr><td>Gemini South</td><td>Infrared</td><td>Cerro Tololo Inter-American Observatory (CTIO), Chile</td></tr>
 									<tr><td>Mt. Cuba Observatory (MCAO) 0.6m</td><td>Optical</td><td>Wilmington, Delaware, USA</td></tr>
-									<tr><td>ERAU 1m</td><td>Optical</td><td>Daytona Beach, Florida, USA</td></tr>
 									<tr><td>Lookout Observatory 14 inch</td><td>Optical</td><td>Asheville, North Carolina, USA</td></tr>
+									<tr><td>Rosemary Hill Observatory 14 inch</td><td>Optical</td><td>Bronson, Florida, USA</td></tr>
 									<tr><td>Baker Observatory</td><td>Optical</td><td>Fair Grove, Missouri, USA</td></tr>
+									<tr><td>Oculus Observatory</td><td>Optical</td><td>Valley Mills, Texas, USA</td></tr>
 									<tr><td>Paul and Jane Meyer Observatory (PJMO) 0.6m</td><td>Optical</td><td>Valley Mills, Texas, USA</td></tr>
 									<tr><td>2.1-meter, McDonald Observatory</td><td>Optical</td><td>Fort Davis, Texas, USA</td></tr>
 									<tr><td>McDonald 1-meter, LCO</td><td>Optical</td><td>Fort Davis, Texas, USA</td></tr>
