--- a/xcov31_telescopes.html
+++ b/xcov31_telescopes.html
@@ -31,7 +31,7 @@
 								<table>
 									<tr><th>Telescope</th><th>Type</th><th>Location</th></tr>
 									<tr><td>Apache Point Observatory (APO) 3.5m</td><td>Infrared</td><td>Sunspot, New Mexico, USA</td></tr>
-									<tr><td>National Astronomical Observatory San Pedro Martir (OAN-SPM) 1.5m</td><td>Infrared</td><td>Baja California, Mexico</td></tr>
+									
 									<tr><td>Haleakala 2-meter, Las Cumbres Observatory (LCO) global telescope network</td><td>Infrared</td><td>Haleakala, Hawaii, USA</td></tr>
 									<tr><td>3.6m Devasthal Optical Telescope (DOT)</td><td>Infrared</td><td>Devasthal, India</td></tr>
 									<tr><td>Calar Alto Observatory (CAHA) 2.2m</td><td>Infrared</td><td>Andalucia, Spain</td></tr>
@@ -46,7 +46,8 @@
 									<tr><td>McDonald 1-meter, LCO</td><td>Optical</td><td>Fort Davis, Texas, USA</td></tr>
 									<tr><td>APO 0.5m</td><td>Infrared</td><td>Sunspot, New Mexico, USA</td></tr>
 									<tr><td>Steward Observatory 61"</td><td>Optical</td><td>Tucson, Arizona, USA</td></tr>
-									<tr><td>Kitt Peak 0.9-meter (KP), Southeastern Association for Research in Astronomy (SARA)</td><td>Optical</td><td>Tuscon, Arizona, USA</td></tr>
+									<tr><td>National Astronomical Observatory San Pedro Martir (OAN-SPM) 1.5m</td><td>Optical</td><td>Baja California, Mexico</td></tr>
+									<tr><td>SkiesAway Remote Observatory</td><td>Optical</td><td>Paso Robles, California, USA</td></tr>
 									<tr><td>University of Hawaii 2.2 meter</td><td>Optical</td><td>Muana Kea, Hawaii, USA</td></tr>
 									<tr><td>Amagi Observatory</td><td>Optical</td><td>Amagi, Japan</td></tr>
 									<tr><td>Lulin Observatory 1m</td><td>Optical</td><td>Xinyi Township, Taiwan</td></tr>
@@ -59,17 +60,19 @@
 									<tr><td>Zeiss-1000 at Tian Shan Astronomical Observatory</td><td>Optical</td><td>Almaty, Kazakhstan</td></tr>
 									<tr><td>ADYU60 at Adiyaman Observatory</td><td>Optical</td><td>Adiyaman, Türkiye</td></tr>
 									<tr><td>Moletai Observatory 0.35m</td><td>Optical</td><td>Kulionys, Lithuania</td></tr>
-									<tr><td>Tymce 14inch remote telescope</td><td>Optical</td><td>Tymce, Poland</td></tr>
 									<tr><td>Mt. Suhora Astronomical Observatory 0.6m</td><td>Optical</td><td>Koninki, Poland</td></tr>
 									<tr><td>Krakow 0.5m</td><td>Optical</td><td>Krakow, Poland</td></tr>
 									<tr><td>CDK500 Remote telescope</td><td>Optical</td><td>Krakow, Poland</td></tr>
 									<tr><td>Piszkéstető Observatory 1m RCC</td><td>Optical</td><td>Mátraszentimre, Hungary</td></tr>
+									<tr><td>CDK700 Chorzow Observatory</td><td>Optical</td><td>Chorzow, Poland</td></tr>
 									<tr><td>Tübingen Observatory 0.8m</td><td>Optical</td><td>Tübingen, Germany</td></tr>
 									<tr><td>Horten Astronomical Observatory 0.68m</td><td>Optical</td><td>Horten, Norway</td></tr>
 									<tr><td>Teide 1-meter, LCO</td><td>Optical</td><td>Tenerife, Spain</td></tr>
-									<tr><td>Roque de los Muchachos 1-meter (RM), SARA</td><td>Optical</td><td>Roque de los Muchachos, La Palma, Spain</td></tr>
+									<tr><td>Roque de los Muchachos 1-meter (RM), Southeastern Association for Research in Astronomy (SARA)</td><td>Optical</td><td>Roque de los Muchachos, La Palma, Spain</td></tr>
 									<tr><td>Warwick 1m</td><td>Optical</td><td>Roque de los Muchachos, La Palma, Spain</td></tr>
+									<tr><td>TWIST 0.5m</td><td>Optical</td><td>Roque de los Muchachos, La Palma, Spain</td></tr>
 									<tr><td>Pico dos Dias Observatory (OPD) 0.6m</td><td>Optical</td><td>Itajuba, Brazil</td></tr>
+									<tr><td>Remote Observatory Atacama Desert</td><td>Optical</td><td>San Pedro, Chile</td></tr>
 									<tr><td>CTIO 0.6-meter, SARA</td><td>Optical</td><td>CTIO, Chile</td></tr>
 									<tr><td>CTIO 1-meter, LCO</td><td>Optical</td><td>CTIO, Chile</td></tr>
 									
