--- a/wet.html
+++ b/wet.html
@@ -58,10 +58,10 @@
 									and phot2lc (Vanderbosche 2021) software packages. The top panel of the light curves show the observations of a target in relative flux versus time since the first recorded observation.
 									The second panel shows the light curve transformed into frequency space, allowing us to identify the presenece of pulsations.</p>
 								<h3>G29-38</h3>
-								<span class="image"><img src="images/g2938_1020.png" width="800" height=auto alt="" /></span>
-								<p>Here is the light curve of G29-38 after the first 9 nights of observing. We can see that G29-38 currently has very large pulsations occuring.</p>
+								<span class="image"><img src="images/g2938_weld_11-04.png" width="800" height=auto alt="" /></span>
+								<p>Here is the light curve of G29-38 after 23 nights of observing. We can see that G29-38 currently has very large pulsations occuring.</p>
 								<h3>WD 0145+234</h3>
-								<span class="image"><img src="images/wd0145_10-18.png" width="800" height=auto alt="" /></span>
+								<span class="image"><img src="images/wd0145_weld_11-04.png" width="800" height=auto alt="" /></span>
 								<p>Here is the light curve of WD 0145+234 after the first 7 nights of observing. This data has allowed us to place a strong limiting amplitude on any possible pulsations.
 									The only significant pulsation is likely being caused the gaps in data.</p>
 							</section>
