--- a/wet.html
+++ b/wet.html
@@ -64,6 +64,14 @@
 								<span class="image"><img src="images/wd0145_weld_11-04.png" width="800" height=auto alt="" /></span>
 								<p>Here is the light curve of WD 0145+234 after the first 7 nights of observing. This data has allowed us to place a strong limiting amplitude on any possible pulsations.
 									The only significant pulsation is likely being caused the gaps in data.</p>
+								<h3>WG 14</h3>
+								<span class="image"><img src="images/wg14_weld_11-04.png" width="800" height=auto alt="" /></span>
+								<p>Here is the light curve of WG 14 after 2 nights of observing. This data has allowed us to place a strong limiting amplitude on any possible pulsations.
+									The only significant pulsation is likely being caused the gaps in data.</p>
+								<h3>GALEX J215503.0+761009</h3>
+								<span class="image"><img src="images/galex_weld_11-04.png" width="800" height=auto alt="" /></span>
+								<p>Here is the light curve of GALEX J215503.0+761009 after the first 7 nights of observing. This data has allowed us to place a strong limiting amplitude on any possible pulsations.
+									The only significant pulsation is likely being caused the gaps in data.</p>
 							</section>
 
 					</div>
