--- a/wet.html
+++ b/wet.html
@@ -60,6 +60,10 @@
 								<h3>G29-38</h3>
 								<span class="image"><img src="images/g2938_weld_11-04.png" width="800" height=auto alt="" /></span>
 								<p>Here is the light curve of G29-38 after 23 nights of observing. We can see that G29-38 currently has very large pulsations occuring.</p>
+								<h3>ZTF J0328-1219</h3>
+								<span class="image"><img src="images/ztf_weld_11-04.png" width="800" height=auto alt="" /></span>
+								<p>Here is the light curve of ZTF J0328-1219 after the first 7 nights of observing. This data has allowed us to place a strong limiting amplitude on any possible pulsations.
+									The only significant pulsation is likely being caused the gaps in data.</p>
 								<h3>WD 0145+234</h3>
 								<span class="image"><img src="images/wd0145_weld_11-04.png" width="800" height=auto alt="" /></span>
 								<p>Here is the light curve of WD 0145+234 after the first 7 nights of observing. This data has allowed us to place a strong limiting amplitude on any possible pulsations.
@@ -71,6 +75,22 @@
 								<h3>GALEX J215503.0+761009</h3>
 								<span class="image"><img src="images/galex_weld_11-04.png" width="800" height=auto alt="" /></span>
 								<p>Here is the light curve of GALEX J215503.0+761009 after the first 7 nights of observing. This data has allowed us to place a strong limiting amplitude on any possible pulsations.
+									The only significant pulsation is likely being caused the gaps in data.</p>
+								<h3>PG 0112+104</h3>
+								<span class="image"><img src="images/pg0112_weld_11-04.png" width="800" height=auto alt="" /></span>
+								<p>Here is the light curve of PG 0112+104 after the first 7 nights of observing. This data has allowed us to place a strong limiting amplitude on any possible pulsations.
+									The only significant pulsation is likely being caused the gaps in data.</p>
+								<h3>KUV 05134+2605</h3>
+								<span class="image"><img src="images/kuv_05134_weld_11-04.png" width="800" height=auto alt="" /></span>
+								<p>Here is the light curve of KUV 05134+2605 after the first 7 nights of observing. This data has allowed us to place a strong limiting amplitude on any possible pulsations.
+									The only significant pulsation is likely being caused the gaps in data.</p>
+								<h3>PB 7225</h3>
+								<span class="image"><img src="images/pb7225_weld_11-04.png" width="800" height=auto alt="" /></span>
+								<p>Here is the light curve of PB 7225 after the first 7 nights of observing. This data has allowed us to place a strong limiting amplitude on any possible pulsations.
+									The only significant pulsation is likely being caused the gaps in data.</p>
+								<h3>GD 532</h3>
+								<span class="image"><img src="images/gd532_weld_11-04.png" width="800" height=auto alt="" /></span>
+								<p>Here is the light curve of GD 532 after the first 7 nights of observing. This data has allowed us to place a strong limiting amplitude on any possible pulsations.
 									The only significant pulsation is likely being caused the gaps in data.</p>
 							</section>
 
