--- a/wet.html
+++ b/wet.html
@@ -62,8 +62,8 @@
 								<p>Here is the light curve of G29-38 after 23 nights of observing. We can see that G29-38 currently has very large pulsations occuring.</p>
 								<h3>ZTF J0328-1219</h3>
 								<span class="image"><img src="images/ztf_weld_11-04.png" width="800" height=auto alt="" /></span>
-								<p>Here is the light curve of ZTF J0328-1219 after the first 7 nights of observing. This data has allowed us to place a strong limiting amplitude on any possible pulsations.
-									The only significant pulsation is likely being caused the gaps in data.</p>
+								<p>Here is the light curve of ZTF J0328-1219 after the first 7 nights of observing. These observations are in support of Hubble observations that occurred this October. ZTF J0328-1219 is a very interesting target
+									that has dips in brightness caused by transits of dust in its debris disk.</p>
 								<h3>WD 0145+234</h3>
 								<span class="image"><img src="images/wd0145_weld_11-04.png" width="800" height=auto alt="" /></span>
 								<p>Here is the light curve of WD 0145+234 after the first 7 nights of observing. This data has allowed us to place a strong limiting amplitude on any possible pulsations.
@@ -81,13 +81,13 @@
 									The only significant pulsation is likely being caused the gaps in data.</p>
 								<h3>KUV 05134+2605</h3>
 								<span class="image"><img src="images/kuv_05134_weld_11-04.png" width="800" height=auto alt="" /></span>
-								<p>Here is the light curve of KUV 05134+2605 after 3 nights of observing. </p>
+								<p>Here is the light curve of KUV 05134+2605 after 3 nights of observing. Two significant pulsation frequencies can be seen.</p>
 								<h3>PB 7225</h3>
 								<span class="image"><img src="images/pb7225_weld_11-04.png" width="800" height=auto alt="" /></span>
-								<p>Here is the light curve of PB 7225 after 5 nights of observing.</p>
+								<p>Here is the light curve of PB 7225 after 5 nights of observing. PB 7225 is in a state of rich pulsations currently.</p>
 								<h3>GD 532</h3>
 								<span class="image"><img src="images/gd532_weld_11-04.png" width="800" height=auto alt="" /></span>
-								<p>Here is the light curve of GD 532 after 8 nights of observing.</p>
+								<p>Here is the light curve of GD 532 after 8 nights of observing. GD 532 has several strong pulsations currently.</p>
 							</section>
 
 					</div>
