--- a/wet.html
+++ b/wet.html
@@ -28,6 +28,7 @@
 							<li><a href="xcov31_targets.html" class="active">Targets</a></li>
 							<li><a href="xcov31_telescopes.html">Telescopes</a></li>
 							<li><a href="xcov31_collaborators.html">Collaborators</a></li>
+							<li><a href="wet_lightcurves.html">Collaborators</a></li>
 						</ul>
 					</nav>
 
