--- a/wet_lightcurves.html
+++ b/wet_lightcurves.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>XCOV 31 Targets</h1>
+						<h1>XCOV 31 Lightcurves</h1>
 					</header>
 
 				<!-- Main -->
@@ -28,11 +28,8 @@
 						<!-- Content -->
 							<section id="content" class="main">
 								<h2>G29-38</h2>
-								<h3>G29-38, G mag = 13.06</h3>
-								<p>RA: 23 28 47.637; Dec: +05 14 54.235</p>
-								<p>Finder Chart:</p>
-								<span class="image"><img src="images/G29-38_20arcminute_finder_chart.jpeg" width="500" height=auto alt="" /></span>
-								<p>The cyan circles highlight our preferred comparison stars</p>
+								<span class="image"><img src="images/g2938_individual_telescopes.png" width="500" height=auto alt="" /></span>
+								<p>A wrapped plot showing the G29-38 visible data taken over the full XCOV 31 campaign, from October 13th through November 10th.</p>
 								
                 
 							</section>
