--- a/wet_lightcurves.html
+++ b/wet_lightcurves.html
@@ -29,7 +29,9 @@
 							<section id="content" class="main">
 								<h2>G29-38</h2>
 								<span class="image"><img src="images/g2938_individual_telescopes.png" width="1000" height=auto alt="" /></span>
-								<p>A wrapped plot showing the G29-38 visible data taken over the full XCOV 31 campaign, from October 13th through November 10th.</p>
+								<p>A wrapped plot showing the G29-38 visible data taken over the full XCOV 31 campaign, from October 13th through November 10th.
+								Each subplot spans two days and shows the optical observation data organized by telescope/observatory that gathered the data. The LCO 1 meter data was taken by several telescopes at the 
+								follwoing Las Cumbres observatory sites: Teide, CTIO, and McDonald. All of the LCO 2 meter time was gathered by Siding Springs Observatory.</p>
 								
                 
 							</section>
