--- a/wet.html
+++ b/wet.html
@@ -59,8 +59,8 @@
 									and phot2lc (Vanderbosche 2021) software packages. The top panel of the light curves show the observations of a target in relative flux versus time since the first recorded observation.
 									The second panel shows the light curve transformed into frequency space, allowing us to identify the presenece of pulsations.</p>
 								<h3>G29-38</h3>
-								<span class="image"><img src="images/g2938_weld_11-04.png" width="800" height=auto alt="" /></span>
-								<p>Here is the light curve of G29-38 after 23 nights of observing. We can see that G29-38 currently has very large pulsations occuring.</p>
+								<span class="image"><img src="images/G29-38_visible_complete_lightcurve.png" width="800" height=auto alt="" /></span>
+								<p>Here is the optical light curve of G29-38 from the complete XCOV31 campaign, spanning 27 days.</p>
 								<h3>ZTF J0328-1219</h3>
 								<span class="image"><img src="images/ztf_weld_11-04.png" width="800" height=auto alt="" /></span>
 								<p>Here is the light curve of ZTF J0328-1219 after the first 7 nights of observing. These observations are in support of Hubble observations that occurred this October. ZTF J0328-1219 is a very interesting target
