--- a/wet.html
+++ b/wet.html
@@ -61,6 +61,8 @@
 								<h3>G29-38</h3>
 								<span class="image"><img src="images/G29-38_visible_complete_lightcurve.png" width="800" height=auto alt="" /></span>
 								<p>Here is the optical light curve of G29-38 from the complete XCOV31 campaign, spanning 27 days.</p>
+								<span class="image"><img src="images/G29-38_visible_complete_periodogram.png" width="800" height=auto alt="" /></span>
+								<p>The periodogram of G29-38's optical light curve showing the presence of many pulsations.</p>
 								<h3>ZTF J0328-1219</h3>
 								<span class="image"><img src="images/ztf_weld_11-04.png" width="800" height=auto alt="" /></span>
 								<p>Here is the light curve of ZTF J0328-1219 after the first 7 nights of observing. These observations are in support of Hubble observations that occurred this October. ZTF J0328-1219 is a very interesting target
